# callai-agentic_core

./: .gitignore  CHANGELOG.md  LICENCE  LICENSE  README.md  __init__.py  mcp_config.json  memory.jsonl  pyproject.toml
.github/workflows/: test.yml
agentic_core/: config.py  constants.py  dag_engine.py  decisions.py  engine.py  interfaces.py  utils.py
agentic_core/agents/: __init__.py  builder.py
agentic_core/engines/: __init__.py  dag_engine.py  engine.py  session.py  stream_engine.py
agentic_core/interfaces/: __init__.py  config.py  events.py  llm.py  memory.py
agentic_core/llm_providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
agentic_core/memory/: __init__.py  manager.py  strategies.py
agentic_core/observers/: __init__.py  base.py  dag.py  standard.py
agentic_core/tools/: __init__.py  base.py  manager.py  mcp.py  protocols.py  subagent.py
agentic_core/tools/mcp/: __init__.py  manager.py  tools.py
agentic_core/tools/rag/: __init__.py  core.py  tools.py
agentic_core/tools/rag/providers/: embedders.py
agentic_core/tools/rag/stores/: chromadb_store.py  sqlite_store.py
docs/: CHANGELOG.md  DAG_ENGINE_GUIDE.md  MCP_CONFIG_GUIDE.md  MCP_config.md  RAG_TOOLS.md  TOOLS_GUIDE.md
examples/: example_RAG_index_script.py  example_TUI_with_textual.py  example_simple_usage.py  example_streaming.py  example_usage.py
tests/: conftest.py  mock_mcp_server.py  test_builder.py  test_config.py  test_core.py  test_dag_engine.py  test_dag_resume.py  test_dynamic_operations.py  test_engine.py  test_fixes.py  test_heuristic_tool_args_parser.py  test_mcp.py  test_memory.py  test_openai.py  test_providers.py  test_rag_impl.py  test_rag_simple.py  test_subagent_tool.py  test_tool_manager_lifecycle.py  test_tool_manager_public_api.py  test_tool_parsing.py
