[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_core"]

[project]
name = "agentic_core"
version = "0.1.0"
description = "A lightweight, modular execution engine and routing framework for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "nguyenv", email = "182782819+nguyenv217@users.noreply.github.com" }
]

dependencies = [
    "anyio>=3.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
rag = [
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "chromadb>=0.4.0"
]
openai = ["openai>=2.24.0"]
anthropic = ["anthropic"]
ollama = ["ollama>=0.6.1"]
mcp = ["mcp>=1.27.0"]
all = ["openai", "anthropic", "ollama", "mcp", "rag"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0"
]
