[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_core"]

[project]
name = "callai-agentic_core"
version = "0.6.4"
description = "A lightweight, modular execution engine and routing framework for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
    "LICENSE"
]
authors = [
    { name = "nguyenv", email = "182782819+nguyenv217@users.noreply.github.com" }
]

dependencies = [
    "anyio>=3.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
# Core provider extras
openai = ["openai>=2.24.0"]
anthropic = ["anthropic"]
ollama = ["ollama>=0.6.1"]
mcp = ["mcp>=1.27.0"]

rag-sqlite = [
    "sqlalchemy", 
    "aiosqlite",
    "numpy>=1.24.0"
]

rag-chroma = ["chromadb"]
rag-transformers = ["sentence-transformers"]
rag-openai = ["openai>=2.24.0"]
rag-ollama = ["ollama>=0.6.1"]

rag-all = [
    "callai-agentic_core[rag-sqlite]",
    "callai-agentic_core[rag-chroma]",
    "callai-agentic_core[rag-transformers]",
    "callai-agentic_core[rag-openai]",
    "callai-agentic_core[rag-ollama]"
]

all = [
    "callai-agentic_core[openai]",
    "callai-agentic_core[anthropic]",
    "callai-agentic_core[ollama]",
    "callai-agentic_core[mcp]",
    "callai-agentic_core[rag-sqlite]"
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0"
]